<resources>
    <string name="app_name">Color Match</string>
    <string name="title_activity_high_score_menu">Color Match</string>
    <string name="title_activity_select_difficulty_menu">Color Match</string>
    <string name="title_activity_three_button_game_layout">Color Match</string>
    <string name="title_activity_six_button_game_layout">Color Match</string>
    <string name="action_settings">Settings</string>

    // mainly activity_main strings
    <string name="appTitle">Color Match</string>
    <string name="playGameText">Play Game</string>
    <string name="highScoresText">View High Scores</string>
    <string name="authorText">By AkslandApplications</string>

    // mainly select_difficulty strings
    <string name="selectDifficulty">Select Difficulty</string>
    <string name="homeDescription">Touch this button to return to the home menu</string>
    <string name="easyDiffText">Easy: A Classic</string>
    <string name="mediumDiffText">Medium: The Change Up</string>
    <string name="hardDiffText">Hard: Classic\'s Big Brother</string>
    <string name="expertDiffText">Expert: Like… Crazy Hard</string>

    // mainly difficulty_layout strings
    <string name="giveUpText">Give Up</string>
    <string name="giveUpDialog">Game Over!</string>
    <string name="scoresDialog">High Score: 00\nCurrent Score: 00</string>
    <string-array name="giveUpDialogItems">
        <item>Home</item>
        <item>Play Again</item></string-array>
    <string name="startGameText">Start Game</string>
    <string name="timerText">Timer:</string>
    <string name="timerValueText">3</string>
    <string name="scoreText">Score:</string>
    <string name="scoreValueText">0</string>

    // mainly high_scores_menu strings
    <string name="yourHighScoresText">Your High Scores</string>
    <string name="easyText">Easy:</string>
    <string name="easyHighScore">0</string>
    <string name="mediumText">Medium:</string>
    <string name="mediumHighScore">0</string>
    <string name="hardText">Hard:</string>
    <string name="hardHighScore">0</string>
    <string name="expertText">Expert:</string>
    <string name="expertHighScore">0</string>
    <string name="resetHighScoresText">Reset Your High Scores</string>





</resources>
