<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="3"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.augustana.csc490.colormatch.SelectDifficultyMenu">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/selectDifficulty"
            android:id="@+id/selectDifficultyTextView"
            android:layout_gravity="center"
            android:textSize="32dp"
            android:layout_weight="1"
            android:gravity="center_vertical" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeButton"
            android:contentDescription="@string/homeDescription"
            android:src="@android:drawable/ic_menu_revert"
            android:layout_gravity="center"
            android:onClick="showMainActivity" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:background="@android:color/darker_gray"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easyDiffText"
            android:id="@+id/easyDifficulty"
            android:checked="true"
            android:textSize="18dp"
            android:background="#ff0096ff"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mediumDiffText"
            android:id="@+id/mediumDifficulty"
            android:checked="false"
            android:textSize="18dp"
            android:background="#ffffe600"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hardDiffText"
            android:id="@+id/hardDifficulty"
            android:checked="false"
            android:textSize="18dp"
            android:background="#ffff3200"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expertDiffText"
            android:id="@+id/expertDifficulty"
            android:checked="false"
            android:textSize="18dp"
            android:background="#ffffffff"
            android:textColor="#ff000000"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playGameText"
            android:id="@+id/startGameButton"
            android:layout_gravity="bottom"
            android:onClick="showGameLayout" />
    </LinearLayout>
</GridLayout>
