<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="4"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.augustana.csc490.colormatch.SixButtonGameLayout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giveUpText"
            android:id="@+id/giveUpButton"
            android:layout_gravity="center_vertical|left" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startGameText"
            android:id="@+id/startGameButton"
            android:layout_gravity="center_vertical|right"
            android:layout_weight="1" />
    </LinearLayout>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:background="@android:color/darker_gray"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_column="0"
        android:layout_row="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|left"
            android:layout_column="0"
            android:layout_row="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/timerText"
                android:id="@+id/timerTextView"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="center_vertical|left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/timerValueText"
                android:id="@+id/timerValueTextView"
                android:layout_row="0"
                android:layout_column="1"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical|left" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="center_vertical|right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/scoreText"
                android:id="@+id/scoretextView"
                android:layout_row="0"
                android:layout_column="2"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/scoreValueText"
                android:id="@+id/scoreValueTextView"
                android:layout_row="0"
                android:layout_column="3"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_vertical|right" />
        </LinearLayout>

    </GridLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_column="0"
        android:layout_row="2"
        android:background="@android:color/black"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="125dp"
            android:id="@+id/colorDisplayView"
            android:background="#ffffffff" />
    </LinearLayout>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_gravity="center_horizontal|fill_vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blueButton"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="center|fill"
            android:background="#ff0096ff"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellowButton"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="center|fill"
            android:background="#ffffe600"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/redButton"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="center|fill"
            android:background="#ffff3200"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/purpleButton"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="#ffdc00ff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/greenButton"
            android:layout_gravity="center|fill"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="#ff32ff00" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orangeButton"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="#ffff7d00" />
    </GridLayout>

</GridLayout>
